--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "react-csv": "^2.0.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-query": "^3.13.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-to-print": "^2.12.6",
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
