--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-query": "^3.13.4",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-to-print": "^2.12.6",
