--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^4.3.1",
     "react-to-print": "^2.12.6",
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
